--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <nav id="header__menu" class="header__menu">
           <ul>
-            <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-            <li><a href="#" class="hover"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
+            <li><a href="index.html" class="hover"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+            <li><a href="#"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
             <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
             <li><a href="about-us.html"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
             <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
