About Us Page simple text and some new style

--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
 
     <main>
       <div class="center">
-        <h3 class="page-menu__title">pizza</h3>
+        <!-- <h3 class="page-menu__title">pizza</h3> -->
         <section class="page-menu"><!--               section-one               -->
           <div class="page-menu__div">
             <img src="img/menu_1.jpg" />
@@ -118,7 +118,7 @@
             </div>
           </div>
         </section><!--               end of section-one               -->
-        <h3 class="page-menu__title">kebab</h3>
+        <!-- <h3 class="page-menu__title">kebab</h3> -->
         <section class="page-menu">
           <div class="page-menu__div">
             <img src="img/menu_10.jpg" />
