--- a/about-us.html
+++ b/about-us.html
@@ -38,13 +38,40 @@
           <a href="#"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
-      <h1 class="header--title">bellinzona</h1>
+      <h1 class="header--title">About Us</h1>
     </header><!--        END OF HEADER           -->
 
     <main>
       <div class="center">
         <section class="singel-page"><!--               section-one               -->
-            <h3>About Us page</h3>
+          <h3>MOGGI RESTAURANT</h3>
+          <P>We welcome you to sit back, unwind and appreciate the lovely sights and hints of the ocean
+              while our best gourmet expert sets you up a scrumptious dinner utilizing the best and 
+              freshest ingredients.’Company Name’ ‘s legacy comes from The parent  Restaurant which
+              was built up in 1963. ‘Organization Name’ was worked for people in general and has
+                advanced into a combination between exquisite chic and contemporary fine charge.
+            <br></br>
+            Enjoy our dazzling dishes and make the most of your eating background with us!</P>
+          <h5>Sustenance</h5>
+          <p>In case you’re searching for top notch food, ‘Organization Name’ is unquestionably one of the
+              spots to go in Port Elizabeth. The adaptable menu flaunts some imaginative food, for example,
+              salt and pepper squid on a delicate, Thai-roused plate of mixed greens; harissa angle soup 
+              (with the harissa glue served in a little glass); lemon simmered chicken on dark pepper gnocchi;
+                and a most heavenly cinnamon, fennel and ‘Friends Name’ frozen yogurt. The eatery utilizes 
+                neighborhood create for fish and venison dishes flourish.</p>
+          <h5>Wine</h5>
+          <p>The honor winning wine determination merits uncommon notice, both quaffer and specialist 
+            are all around provided food for. The determination have clearly been picked in light of the
+              menu, and numerous a wine darling’s heart will be heartened to see the decisions accessible.</p>
+          <h5>Service</h5>
+          <p>Administration is right on the money and what you would anticipate from a foundation of this 
+            bore: amazingly proficient and educated, inquiries concerning fixings are handed-off to the
+              cook and replied. The steady nearness of the director on floor adds to the accomplishment of 
+              the eatery.</p>
+          <h5>Climate</h5>
+          <p>The glass divider confronting the sea, unbiased shades, finished dividers and excellent fine 
+            art, just as lavish tablecloths and seats, all contribute toward an extravagant ordeal. 
+            The earthenware and cutlery are just delightful.</p>
         </section>
       </div>
     </main><!--        END OF MAIN           -->
