Add two new menu

--- a/menu.html
+++ b/menu.html
@@ -129,6 +129,22 @@
             </div>
           </div>
           <div class="page-menu__div">
+            <img src="img/menu_10.jpg" />
+            <div>
+              <h3>Doner Kebab</h3>
+              <p>ghosht/kachalo/piyaz</p>
+              <h3 class="red">CHF 20</h3>
+            </div>
+          </div>
+          <div class="page-menu__div">
+            <img src="img/menu_10.jpg" />
+            <div>
+              <h3>Doner Kebab</h3>
+              <p>ghosht/kachalo/piyaz</p>
+              <h3 class="red">CHF 20</h3>
+            </div>
+          </div>
+          <div class="page-menu__div">
             <img src="img/menu_11.jpg" />
             <div>
               <h3>Doner Kebab</h3>
