Add bottom two Language

--- a/about-us.html
+++ b/about-us.html
@@ -27,6 +27,8 @@
               <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
               <li><a href="about-us.html" class="hover"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
               <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
+              <li><a href="#" class="hover"><i class="fa fa-binoculars" aria-hidden="true"></i>EN</a></li>
+              <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>DE</a></li>  
           </ul>
         </nav>
         <a href="javascript:void(0);" class="header__icon" onclick="myFunction()">
