--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/carousel.css">
 
     <!-- javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/javascript.js" defer></script>
     <script src="js/navbar.js" defer></script>
 </head>
@@ -28,11 +29,20 @@
       <div class="header__wrapper">
         <a class="header__logo" href="#"><img src="img/logo.png"/></a>
        
-        <nav id="nav" class="nav" role="navigation">
+        <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
-          <ul class="nav__menu" id="menu" tabindex="-1" aria-label="main navigation" hidden>
+          <ul class="nav__menu navbar-nav mr-auto" id="menu" tabindex="-1" aria-label="main navigation" hidden>
             <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Agencies</a></li>
+            <li class="nav-item dropdown dropdown-backdrop">
+              <a class="nav__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Agencies
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Bellinzona</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Lugano</a></li>
+              </ul>
+            </li>
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
