--- a/agencies_bellinzona.html
+++ b/agencies_bellinzona.html
@@ -9,32 +9,63 @@
     <meta name="author" content="John Doe">
     <title>MOOGI RESTURATN</title>
 
+    <!-- CSS -->
+
     <link href="https://fonts.googleapis.com/css?family=Arsenal|Fredericka+the+Great|Pattaya&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arsenal|Pattaya&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/carousel.css">
+
+    <!-- javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/javascript.js" defer></script>
+    <script src="js/navbar.js" defer></script>
 </head>
 <body>
     <header class="header back_image_1"><!--        HEADER           -->
       <div class="header__wrapper">
         <a class="header__logo" href="index.html"><img src="img/logo.png"/></a>
 
-        <nav id="myLinks" class="header__menu">
-          <ul>
-              <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-              <li><a href="#" class="hover"><i class="fa fa-clipboard" aria-hidden="true"></i>Agencies</a></li>
-              <li><a href="menu.html"><i class="fa fa-folder-open" aria-hidden="true"></i>Menu</a></li>
-              <li><a href="about-us.html"><i class="fa fa-binoculars" aria-hidden="true"></i>About us</a></li>
-              <li><a href="contact-us.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact us</a></li>
-              <li><a href="#" class="hover"><i class="fa fa-binoculars" aria-hidden="true"></i>EN</a></li>
-              <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>DE</a></li>
-  
+        <nav id="nav" class="nav navbar" role="navigation">
+          <!-- ACTUAL NAVIGATION MENU -->
+          <ul class="nav__menu navbar-nav mr-auto" id="menu" tabindex="-1" aria-label="main navigation" hidden>
+            <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+            <li class="nav-item dropdown dropdown-backdrop">
+              <a class="nav__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Agencies
+              </a>
+              <ul class="nav-drop dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Bellinzona</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="agencies_lucarno.html">Lugano</a></li>
+              </ul>
+            </li>
+            <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
+            <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
+            <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
-        </nav>
-        <a href="javascript:void(0);" class="header__icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
+          <!-- MENU TOGGLE BUTTON -->
+          <a href="#nav" class="nav__toggle" role="button" aria-expanded="false" aria-controls="menu">
+            <svg class="menuicon" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
+              <title>Toggle Menu</title>
+              <g>
+                <line class="menuicon__bar" x1="13" y1="16.5" x2="37" y2="16.5"/>
+                <line class="menuicon__bar" x1="13" y1="24.5" x2="37" y2="24.5"/>
+                <line class="menuicon__bar" x1="13" y1="24.5" x2="37" y2="24.5"/>
+                <line class="menuicon__bar" x1="13" y1="32.5" x2="37" y2="32.5"/>
+                <circle class="menuicon__circle" r="23" cx="25" cy="25" />
+              </g>
+            </svg>
+          </a>
+          <!-- ANIMATED BACKGROUND ELEMENT -->
+          <div class="splash"></div>
+          
+        </nav>     
 
         <div class="header__social">
           <a href="#"><i class="fa fa-facebook-square fa-3x fb" aria-hidden="true"></i></a>
