--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 Agencies
               </a>
               <ul class="nav-drop dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Bellinzona</a></li>
+                <li><a class="dropdown-item" href="agencies_bellinzona.html">Bellinzona</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Lugano</a></li>
+                <li><a class="dropdown-item" href="agencies_lucarno.html">Lugano</a></li>
               </ul>
             </li>
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
