--- a/EN/index.html
+++ b/EN/index.html
@@ -32,7 +32,7 @@
         <nav id="nav" class="nav navbar" role="navigation">
           <!-- ACTUAL NAVIGATION MENU -->
           <ul class="nav__menu navbar-nav mr-auto" id="menu" tabindex="-1" aria-label="main navigation" hidden>
-            <li class="nav__item"><a href="index.html" class="nav__link hover">Home</a></li>
+            <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
             <li class="nav-item dropdown dropdown-backdrop">
               <a class="nav__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Agencies
@@ -46,7 +46,6 @@
             <li class="nav__item"><a href="menu.html" class="nav__link">Menu</a></li>
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
-            <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
             <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
             <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
           </ul>
