Add images in singel page

--- a/agencies_lucarno.html
+++ b/agencies_lucarno.html
@@ -78,6 +78,7 @@
     <main>
       <div class="center">
         <section class="singel-page"><!--               section-one               -->
+          <img src="img/menu_10.jpg" />
           <table>
             <tr>
               <td id="block" >Info</td>
