Add gallery in singel-page

--- a/agencies_lucarno.html
+++ b/agencies_lucarno.html
@@ -23,6 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/javascript.js" defer></script>
     <script src="js/navbar.js" defer></script>
+    <script src="js/gallery.js" defer></script>
 </head>
 <body>
     <header class="header back_image_1"><!--        HEADER           -->
@@ -78,7 +79,37 @@
     <main>
       <div class="center">
         <section class="singel-page"><!--               section-one               -->
-          <img src="img/menu_10.jpg" />
+          <div class="gallery">
+            <div class="gallery__container">
+              <div class="gallery__grid">
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/8b1cWDyvT7Y" />
+                    
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/XtUd5SiX464">
+                  </figure>
+              </div>
+            </div>
+          </div>
           <table>
             <tr>
               <td id="block" >Info</td>
