Add gallery in About us page

--- a/agencies_lucarno.html
+++ b/agencies_lucarno.html
@@ -107,6 +107,7 @@
                   <figure class="gallery__img-container">
                     <img class="gallery__img" src="https://source.unsplash.com/XtUd5SiX464">
                   </figure>
+                </div>
               </div>
             </div>
           </div>
