--- a/agencies_bellinzona.html
+++ b/agencies_bellinzona.html
@@ -23,6 +23,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/javascript.js" defer></script>
     <script src="js/navbar.js" defer></script>
+    <script src="js/gallery.js" defer></script>
+
 </head>
 <body>
     <header class="header back_image_1"><!--        HEADER           -->
@@ -77,7 +79,138 @@
 
     <main>
       <div class="center">
-        <section class="page-agency-lucarno"><!--               section-one               -->
+        <section class="singel-page"><!--               section-one               -->
+          <div class="gallery">
+            <div class="gallery__container">
+              <div class="gallery__grid">
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/8b1cWDyvT7Y" />
+                    
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/5VXH4RG88gc" />
+                  </figure>
+                </div>
+                <div>
+                  <figure class="gallery__img-container">
+                    <img class="gallery__img" src="https://source.unsplash.com/XtUd5SiX464">
+                  </figure>
+              </div>
+            </div>
+          </div>
+          </div>
+          <table>
+            <tr>
+              <td id="block" >Info</td>
+              <td>Our branch in Locarno has stood for you for over 5 years</td>
+            </tr>
+          </table>
+          <table>
+            <tr>
+              <td>Address :</td>
+              <td>Keltenstrasse 3, 3018 Bern</td>
+            </tr>
+            <tr>
+              <td>Phone number:</td>
+              <td>(+41) 79 897 42 58</td>
+            </tr>
+            <tr>
+              <td>Opening hours</td>
+              <td>
+                <table>
+                  <tr>
+                    <td>Mo - Fr :</td>
+                    <td>08:00 to 22:00 Clock</td>
+                  </tr>
+                  <tr>
+                    <td>Sa - So :</td>
+                    <td>08:00 to 22:00 Clock</td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </table>
+          <h3>menu</h3>
+          <div class="page-lucarno__menu">
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+            <div class="page-lucarno__div">
+              <img src="img/menu_1.jpg" />
+              <div>
+                <h3>Doner Kebab</h3>
+                <p>ghosht/kachalo/piyaz</p>
+                <h3 class="red">CHF 20</h3>
+              </div>
+            </div>
+
+          </div>
 
         </section>
       </div>
