--- a/agencies_lucarno.html
+++ b/agencies_lucarno.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"
-    <meta name="description" content="Free Web tutorials">
+    <meta name="description" content="">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta name="author" content="John Doe">
+    <meta name="author" content="Kazam Zahedi">
     <title>MOOGI RESTURATN</title>
 
     <!-- CSS -->
