--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"
     <meta name="description" content="">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta name="author" content="John Doe">
+    <meta name="author" content="kazam Zahedi">
     <title>MOOGI RESTURATN</title>
 
     <!-- CSS -->
