set link to DE version

--- a/EN/about-us.html
+++ b/EN/about-us.html
@@ -50,7 +50,7 @@
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
             <li class="nav__item"><a href="../about-us.html" class="nav__link">IT</a></li>
             <li class="nav__item"><a href="#" class="nav__link hover">EN</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
+            <li class="nav__item"><a href="../DE/about-us.html" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
           <a href="#nav" class="nav__toggle" role="button" aria-expanded="false" aria-controls="menu">
