set all link to the another Language

--- a/agencies_lucarno.html
+++ b/agencies_lucarno.html
@@ -48,8 +48,8 @@
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
             <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
+            <li class="nav__item"><a href="EN/agencies_lucarno.html" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="DE/agencies_lucarno.html" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
           <a href="#nav" class="nav__toggle" role="button" aria-expanded="false" aria-controls="menu">
