--- a/contact-us.html
+++ b/contact-us.html
@@ -47,8 +47,8 @@
             <li class="nav__item"><a href="about-us.html" class="nav__link">About us</a></li>
             <li class="nav__item"><a href="#" class="nav__link hover">Contact us</a></li>
             <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">EN</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
+            <li class="nav__item"><a href="EN/contact-us.html" class="nav__link">EN</a></li>
+            <li class="nav__item"><a href="DE/contact-us.html" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
           <a href="#nav" class="nav__toggle" role="button" aria-expanded="false" aria-controls="menu">
