--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li class="nav__item"><a href="contact-us.html" class="nav__link">Contact us</a></li>
             <li class="nav__item"><a href="#" class="nav__link hover">IT</a></li>
             <li class="nav__item"><a href="EN/index.html" class="nav__link">EN</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">DE</a></li>
+            <li class="nav__item"><a href="DE/index.html" class="nav__link">DE</a></li>
           </ul>
           <!-- MENU TOGGLE BUTTON -->
           <a href="#nav" class="nav__toggle" role="button" aria-expanded="false" aria-controls="menu">
